Improve SaaS polish: real CTAs, checkout modal, legal + security.txt, headers

--- a/intake.html
+++ b/intake.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Scope Intake | Agentic Security Partners</title>
   <meta name="description" content="Complete your security assessment scope intake form." />
+  <link rel="icon" href="/logo.png" />
   <style>
     :root{--bg:#0b0f17;--panel:#101827;--text:#e9eef7;--muted:#a9b4c7;--line:#1f2a3d;--accent:#7c5cff;--ok:#22c55e;--warn:#f59e0b;--error:#ef4444;--shadow:0 18px 60px rgba(0,0,0,.35);--r:18px;--max:800px}
     *{box-sizing:border-box} html,body{height:100%}
@@ -180,7 +181,9 @@
     </div>
     
     <footer class="foot">
-      <div>Agentic Security Partners LLC • <a href="/">Back to home</a></div>
+      <div>
+        Agentic Security Partners LLC • <a href="/">Back to home</a> • <a href="/privacy.html">Privacy</a> • <a href="/terms.html">Terms</a> • <a href="/.well-known/security.txt">Security</a>
+      </div>
     </footer>
   </div>
   
