Add CVSS context to validation case study

--- a/case-studies/validation-in-action.html
+++ b/case-studies/validation-in-action.html
@@ -57,7 +57,7 @@
       <div class="kpis">
         <div class="kpi">
           <p class="num">4</p>
-          <p class="lbl">Scanner “critical” candidates</p>
+          <p class="lbl">Scanner “critical” candidates <span style="color:#fde68a;font-weight:800">(CVSS 9.1)</span></p>
         </div>
         <div class="kpi">
           <p class="num">0</p>
@@ -71,8 +71,8 @@
 
       <h2>What the scanner flagged</h2>
       <ul>
-        <li><strong>NoSQL injection auth bypass</strong> — heuristic: “200 OK with homepage content instead of login form”</li>
-        <li><strong>LDAP injection auth bypass (3 variants)</strong> — heuristic: “200 OK with homepage content”</li>
+        <li><strong>NoSQL injection auth bypass</strong> — Scanner: <strong>Critical</strong> (<strong>CVSS 9.1</strong>) — heuristic: “200 OK with homepage content instead of login form”</li>
+        <li><strong>LDAP injection auth bypass (3 variants)</strong> — Scanner: <strong>Critical</strong> (<strong>CVSS 9.1</strong>) — heuristic: “200 OK with homepage content”</li>
       </ul>
 
       <h2>How we validated it</h2>
