--- a/case-studies/validation-in-action.html
+++ b/case-studies/validation-in-action.html
@@ -31,6 +31,7 @@
     .kpi{border:1px solid var(--line);border-radius:14px;background:rgba(0,0,0,.22);padding:14px}
     .kpi .num{font-size:32px;font-weight:900;color:var(--ok);margin:0}
     .kpi .lbl{margin:2px 0 0;font-size:13px}
+    .danger{color:#ef4444;font-weight:800}
     .note{margin-top:14px;padding:12px 14px;border-radius:14px;border:1px solid rgba(245,158,11,.25);background:rgba(245,158,11,.08)}
     code,pre{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
     pre{white-space:pre-wrap;color:var(--text);background:rgba(0,0,0,.25);border:1px solid var(--line);border-radius:14px;padding:14px;overflow:auto}
@@ -57,7 +58,7 @@
       <div class="kpis">
         <div class="kpi">
           <p class="num">4</p>
-          <p class="lbl">Scanner “critical” candidates <span style="color:#fde68a;font-weight:800">(CVSS 9.1)</span></p>
+          <p class="lbl">Scanner <span class="danger">“critical”</span> candidates<br><span class="danger">(CVSS 9.1)</span></p>
         </div>
         <div class="kpi">
           <p class="num">0</p>
@@ -71,8 +72,8 @@
 
       <h2>What the scanner flagged</h2>
       <ul>
-        <li><strong>NoSQL injection auth bypass</strong> — Scanner: <strong>Critical</strong> (<strong>CVSS 9.1</strong>) — heuristic: “200 OK with homepage content instead of login form”</li>
-        <li><strong>LDAP injection auth bypass (3 variants)</strong> — Scanner: <strong>Critical</strong> (<strong>CVSS 9.1</strong>) — heuristic: “200 OK with homepage content”</li>
+        <li><strong>NoSQL injection auth bypass</strong> — Scanner: <span class="danger">Critical</span> (<span class="danger">CVSS 9.1</span>) — heuristic: “200 OK with homepage content instead of login form”</li>
+        <li><strong>LDAP injection auth bypass (3 variants)</strong> — Scanner: <span class="danger">Critical</span> (<span class="danger">CVSS 9.1</span>) — heuristic: “200 OK with homepage content”</li>
       </ul>
 
       <h2>How we validated it</h2>
