feat: add gated demo + React2Shell resources and refactor Proof

--- a/index.html
+++ b/index.html
@@ -559,10 +559,11 @@
     <!-- Proof / Resources Page -->
     <div id="page-proof" class="page">
       <section class="sec">
-        <h1 style="margin:0 0 12px;letter-spacing:-.3px">Proof</h1>
-        <p class="sub" style="margin-bottom:24px">Short, concrete examples of how validation turns scanner noise into actionable signal.</p>
+        <h1 style="margin:0 0 12px;letter-spacing:-.3px">Proof & Resources</h1>
+        <p class="sub" style="margin-bottom:20px">Short, concrete examples of how validation turns scanner noise into actionable signal — plus resources you can share internally.</p>
 
-        <div class="grid4" style="margin-bottom:24px">
+        <h2 style="margin:0 0 10px;letter-spacing:-.2px">Proof</h2>
+        <div class="grid4" style="margin-bottom:22px">
           <a class="card feat" href="/case-studies/validation-in-action.html">
             <h3><svg class="ico" aria-hidden="true"><use href="#ico-user-check" xlink:href="#ico-user-check"></use></svg>Case study: “Validation in action”</h3>
             <p>A real-world example: 4 scanner “critical” auth bypass findings → 0 confirmed after validation, with evidence.</p>
@@ -576,8 +577,28 @@
             <p>“From 4 Critical to 0 Confirmed” — the high-level pipeline and why it matters.</p>
           </a>
           <a class="card feat" href="/blog/why-your-scanners-critical-findings-are-probably-wrong.html">
-            <h3><svg class="ico" aria-hidden="true"><use href="#ico-bolt" xlink:href="#ico-bolt"></use></svg>Blog post</h3>
+            <h3><svg class="ico" aria-hidden="true"><use href="#ico-bolt" xlink:href="#ico-bolt"></use></svg>Blog: scanner criticals are probably wrong</h3>
             <p>Why many “critical” scanner findings are false positives, and how to validate fast without breaking prod.</p>
+          </a>
+        </div>
+
+        <h2 style="margin:0 0 10px;letter-spacing:-.2px">Resources</h2>
+        <div class="grid4" style="margin-bottom:24px">
+          <a class="card feat" href="/blog/react2shell-validation.html">
+            <h3><svg class="ico" aria-hidden="true"><use href="#ico-bolt" xlink:href="#ico-bolt"></use></svg>React2Shell: what’s real vs noise</h3>
+            <p>A practical validation checklist for client-side “critical” findings (SSR, prototype pollution, exploit path, mitigations).</p>
+          </a>
+          <a class="card feat" href="/briefs/client-side-critical-findings.html">
+            <h3><svg class="ico" aria-hidden="true"><use href="#ico-file-text" xlink:href="#ico-file-text"></use></svg>Executive brief: client-side “critical”</h3>
+            <p>Decision framework for CTOs: validate before you mobilize engineering, with escalation criteria and ROI math.</p>
+          </a>
+          <a class="card feat" href="/demo.html?utm_source=proof&utm_medium=site&utm_campaign=demo_gate">
+            <h3><svg class="ico" aria-hidden="true"><use href="#ico-play" xlink:href="#ico-play"></use></svg>Watch the demo (email)</h3>
+            <p>3–5 minute walkthrough of candidate → confirmed workflow. We’ll email you the demo link when it’s ready.</p>
+          </a>
+          <a class="card feat" href="mailto:hello@agenticsec.team?subject=72-Hour%20Critical%20Triage%20Request">
+            <h3><svg class="ico" aria-hidden="true"><use href="#ico-target" xlink:href="#ico-target"></use></svg>Request a 72-hour triage</h3>
+            <p>Send your top “critical” findings. We’ll validate exploitability and return clear verdicts with evidence.</p>
           </a>
         </div>
 
