chore: rename Rapid Assessment to 72-hour Critical Triage

--- a/index.html
+++ b/index.html
@@ -636,9 +636,9 @@
           
           <div class="card price">
             <div class="badge badgeNew">Fast</div>
-            <h3 style="margin:0 0 4px">Rapid Assessment</h3>
+            <h3 style="margin:0 0 4px">72‑Hour Critical Triage</h3>
             <div class="range">$2,500 <span class="small">USD</span></div>
-            <div class="turnaround">24-48 hour turnaround</div>
+            <div class="turnaround">72 hour turnaround</div>
             <ul style="font-size:13px">
               <li>Single app or API</li>
               <li>OWASP Top 10 checks</li>
@@ -759,7 +759,7 @@
             <h3 style="margin:0 0 10px">Quick start options</h3>
             <ul>
               <li><strong>$500 Attack Surface Intel:</strong> Same-day external reconnaissance</li>
-              <li><strong>$2,500 Rapid Assessment:</strong> 24-48 hour OWASP Top 10 check</li>
+              <li><strong>$2,500 72‑Hour Critical Triage:</strong> 72-hour OWASP Top 10 check (critical findings only)</li>
               <li><strong>$5k+ Standard:</strong> Full assessment with PDF reports + attestation</li>
             </ul>
           </div>
