--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
     .btn{padding:12px 14px;border-radius:12px;border:1px solid var(--line);background:rgba(255,255,255,.02);font-weight:800;font-size:14px;cursor:pointer;transition:border-color 0.2s}
     .btnP{border-color:rgba(124,92,255,.35);background:rgba(124,92,255,.18)}
     .btn:hover{border-color:rgba(169,180,199,.35)}
+    /* Pricing CTAs: stronger contrast so they don't look washed out on dark cards */
+    .price .btnP{
+      color: #fff;
+      border-color: rgba(124,92,255,.6);
+      background: linear-gradient(180deg, rgba(124,92,255,.95), rgba(124,92,255,.70));
+      box-shadow: 0 10px 30px rgba(124,92,255,.18);
+    }
+    .price .btnP:hover{
+      border-color: rgba(124,92,255,.8);
+      background: linear-gradient(180deg, rgba(124,92,255,1), rgba(124,92,255,.78));
+    }
 
     .heroR{padding:18px;display:flex;align-items:center;justify-content:center}
     .stats{display:grid;grid-template-columns:repeat(2,1fr);gap:14px;width:100%}
