--- a/case-studies/validation-in-action.html
+++ b/case-studies/validation-in-action.html
@@ -6,41 +6,93 @@
   <title>Case Study: Validation in Action | Agentic Security Partners</title>
   <meta name="description" content="A short case study showing how validation turns scanner critical findings into verified signal." />
   <link rel="icon" href="/logo.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&family=Source+Sans+3:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,500&display=swap" rel="stylesheet">
   <style>
-    :root{--bg:#0b0f17;--panel:#101827;--text:#e9eef7;--muted:#a9b4c7;--line:#1f2a3d;--accent:#7c5cff;--ok:#22c55e;--warn:#f59e0b;--shadow:0 18px 60px rgba(0,0,0,.35);--r:18px;--max:900px}
-    *{box-sizing:border-box} html,body{height:100%}
-    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;line-height:1.65;color:var(--text);
-      background:radial-gradient(1000px 500px at 10% 5%, rgba(139,92,246,.5), transparent 50%),
-                 radial-gradient(900px 450px at 90% 15%, rgba(16,185,129,.3), transparent 50%),
-                 var(--bg);
+    :root{
+      --bg:#faf8fc;
+      --bg-subtle:#f3f0f9;
+      --panel:#ffffff;
+      --panel-border:rgba(59,29,90,.08);
+      --text:#24143d;
+      --text-secondary:#3b1d5a;
+      --muted:#6b5b7a;
+      --line:#e8e2f0;
+      --accent:#a855f7;
+      --accent-dark:#8b5cf6;
+      --accent-light:#c084fc;
+      --ok:#10b981;
+      --warn:#f59e0b;
+      --danger:#ef4444;
+      --shadow:0 4px 24px rgba(36,20,61,.08), 0 1px 3px rgba(36,20,61,.04);
+      --r:16px;
+      --r-sm:10px;
+      --max:900px;
+      --footer-bg:#24143d;
+      --footer-text:#e8e2f0;
+      --footer-muted:#a89bb8;
     }
-    a{color:var(--accent);text-decoration:none}
+    *{box-sizing:border-box} html,body{height:100%}
+    body{
+      margin:0;
+      font-family:'Source Sans 3',system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+      font-size:17px;
+      line-height:1.65;
+      color:var(--text);
+      background:var(--bg);
+    }
+    body::before{
+      content:'';
+      position:fixed;
+      inset:0;
+      background:
+        radial-gradient(ellipse 80% 50% at 20% 0%, rgba(168,85,247,.08), transparent 60%),
+        radial-gradient(ellipse 60% 40% at 80% 20%, rgba(6,182,212,.06), transparent 50%);
+      pointer-events:none;
+      z-index:-1;
+    }
+    a{color:var(--accent);text-decoration:none;font-weight:500}
     a:hover{text-decoration:underline}
-    .wrap{max-width:var(--max);margin:0 auto;padding:24px}
-    .card{background:rgba(16,24,39,.75);border:1px solid var(--line);border-radius:var(--r);box-shadow:var(--shadow);backdrop-filter:blur(10px);padding:26px}
-    .top{display:flex;align-items:center;justify-content:space-between;gap:14px;margin-bottom:14px}
-    .brand{display:flex;align-items:center;gap:10px}
-    .logo{height:40px;width:auto;object-fit:contain;border-radius:8px}
-    .pill{display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid rgba(124,92,255,.35);background:rgba(124,92,255,.12);color:var(--muted);font-size:12px}
-    h1{margin:8px 0 8px;letter-spacing:-.3px;line-height:1.2}
-    h2{margin:18px 0 8px;letter-spacing:-.2px}
+    h1,h2,h3{font-family:'Bitter',Georgia,serif;font-weight:700;color:var(--text);line-height:1.2}
+    .wrap{max-width:var(--max);margin:0 auto;padding:28px 24px}
+    .card{background:var(--panel);border:1px solid var(--panel-border);border-radius:var(--r);box-shadow:var(--shadow);padding:32px}
+    .top{display:flex;align-items:center;justify-content:space-between;gap:14px;margin-bottom:18px;flex-wrap:wrap}
+    .brand{display:flex;align-items:center;gap:12px}
+    .logo{height:44px;width:auto;object-fit:contain;border-radius:10px}
+    .pill{display:inline-block;padding:7px 14px;border-radius:999px;background:linear-gradient(135deg, rgba(168,85,247,.12), rgba(6,182,212,.08));border:1px solid rgba(168,85,247,.2);color:var(--muted);font-size:13px;font-weight:600}
+    h1{margin:10px 0 12px;font-size:30px;letter-spacing:-.5px}
+    h2{margin:26px 0 12px;font-size:22px;letter-spacing:-.3px;color:var(--text-secondary)}
     p,li{color:var(--muted)}
-    ul{margin:8px 0 0;padding-left:18px}
-    .kpis{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:16px}
+    ul{margin:10px 0 0;padding-left:22px}
+    li{margin:8px 0}
+    .kpis{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:20px}
     @media (max-width:720px){.kpis{grid-template-columns:1fr}}
-    .kpi{border:1px solid var(--line);border-radius:14px;background:rgba(0,0,0,.22);padding:14px}
-    .kpi .num{font-size:32px;font-weight:900;color:var(--ok);margin:0}
-    .kpi .lbl{margin:2px 0 0;font-size:13px}
-    .danger{color:#ef4444;font-weight:800}
-    .flag{margin:10px 0}
-    .flag .t{color:var(--text);font-weight:800}
-    .flag .m{margin-top:4px;font-size:13px}
+    .kpi{border:1px solid var(--line);border-radius:var(--r-sm);background:var(--bg-subtle);padding:18px;text-align:center}
+    .kpi .num{font-family:'Bitter',Georgia,serif;font-size:36px;font-weight:800;background:linear-gradient(135deg, var(--ok), var(--accent));-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;margin:0}
+    .kpi .lbl{margin:4px 0 0;font-size:14px}
+    .danger{color:var(--danger);font-weight:700}
+    .flag{margin:12px 0;padding:14px 16px;background:var(--bg-subtle);border-radius:var(--r-sm);border:1px solid var(--line)}
+    .flag .t{color:var(--text);font-weight:700}
+    .flag .m{margin-top:6px;font-size:14px}
     .flag .h{margin-top:6px;font-size:13px;color:var(--muted)}
-    .flag code{font-size:12.5px}
-    .note{margin-top:14px;padding:12px 14px;border-radius:14px;border:1px solid rgba(245,158,11,.25);background:rgba(245,158,11,.08)}
+    .flag code{background:rgba(168,85,247,.1);padding:2px 6px;border-radius:4px;font-size:13px;color:var(--accent-dark)}
+    .note{margin-top:18px;padding:16px 18px;border-radius:var(--r-sm);border:1px solid rgba(245,158,11,.25);background:linear-gradient(135deg, rgba(245,158,11,.08), rgba(245,158,11,.03))}
+    .note strong{color:#d97706}
     code,pre{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
-    pre{white-space:pre-wrap;color:var(--text);background:rgba(0,0,0,.25);border:1px solid var(--line);border-radius:14px;padding:14px;overflow:auto}
-    .foot{margin-top:18px;border-top:1px solid var(--line);padding-top:14px;color:var(--muted);font-size:12.5px}
+    pre{white-space:pre-wrap;color:var(--text);background:var(--bg-subtle);border:1px solid var(--line);border-radius:var(--r-sm);padding:18px;overflow:auto;font-size:14px}
+    
+    footer.foot{
+      background:var(--footer-bg);
+      color:var(--footer-text);
+      padding:36px 24px 28px;
+      margin-top:32px;
+    }
+    footer.foot .foot-inner{max-width:var(--max);margin:0 auto;text-align:center}
+    footer.foot a{color:var(--footer-muted);transition:color 0.2s}
+    footer.foot a:hover{color:var(--accent-light)}
+    footer.foot .foot-links{display:flex;gap:20px;flex-wrap:wrap;justify-content:center;margin-bottom:12px}
+    footer.foot .foot-copy{font-size:13px;color:var(--footer-muted)}
   </style>
 </head>
 <body>
@@ -50,20 +102,20 @@
         <div class="brand">
           <a href="/"><img src="/logo.png" alt="Agentic Security Partners" class="logo" /></a>
           <div>
-            <div style="font-weight:900;letter-spacing:-.2px">Agentic Security Partners</div>
+            <div style="font-family:'Bitter',Georgia,serif;font-weight:800;font-size:18px;letter-spacing:-.2px">Agentic Security Partners</div>
             <div class="pill">Case study</div>
           </div>
         </div>
         <a class="pill" href="/#proof">← Back to Proof</a>
       </div>
 
-      <h1>Validation in action: when “Critical” isn’t real</h1>
-      <p>This example shows how a common scanner heuristic can produce “critical auth bypass” findings — and how a lightweight validation loop can prove exploitability (or quickly close it out).</p>
+      <h1>Validation in action: when "Critical" isn't real</h1>
+      <p>This example shows how a common scanner heuristic can produce "critical auth bypass" findings — and how a lightweight validation loop can prove exploitability (or quickly close it out).</p>
 
       <div class="kpis">
         <div class="kpi">
           <p class="num">4</p>
-          <p class="lbl">Scanner <span class="danger">“critical”</span> candidates<br><span class="danger">(CVSS 9.1)</span></p>
+          <p class="lbl">Scanner <span class="danger">"critical"</span> candidates<br><span class="danger">(CVSS 9.1)</span></p>
         </div>
         <div class="kpi">
           <p class="num">0</p>
@@ -76,18 +128,16 @@
       </div>
 
       <h2>What the scanner flagged</h2>
-      <ul>
-        <li class="flag">
-          <div class="t">NoSQL injection auth bypass</div>
-          <div class="m">Scanner: <span class="danger">Critical</span> (<span class="danger">CVSS 9.1</span>)</div>
-          <div class="h">Heuristic: <code>200 OK</code> with homepage content instead of login form</div>
-        </li>
-        <li class="flag">
-          <div class="t">LDAP injection auth bypass (3 variants)</div>
-          <div class="m">Scanner: <span class="danger">Critical</span> (<span class="danger">CVSS 9.1</span>)</div>
-          <div class="h">Heuristic: <code>200 OK</code> with homepage content</div>
-        </li>
-      </ul>
+      <div class="flag">
+        <div class="t">NoSQL injection auth bypass</div>
+        <div class="m">Scanner: <span class="danger">Critical</span> (<span class="danger">CVSS 9.1</span>)</div>
+        <div class="h">Heuristic: <code>200 OK</code> with homepage content instead of login form</div>
+      </div>
+      <div class="flag">
+        <div class="t">LDAP injection auth bypass (3 variants)</div>
+        <div class="m">Scanner: <span class="danger">Critical</span> (<span class="danger">CVSS 9.1</span>)</div>
+        <div class="h">Heuristic: <code>200 OK</code> with homepage content</div>
+      </div>
 
       <h2>How we validated it</h2>
       <ul>
@@ -98,7 +148,7 @@
       </ul>
 
       <h2>What we found</h2>
-      <p>The root endpoint returned the same homepage response for all requests — payload and control — indicating the response-shape “signal” was an artifact, not exploitability.</p>
+      <p>The root endpoint returned the same homepage response for all requests — payload and control — indicating the response-shape "signal" was an artifact, not exploitability.</p>
 
       <pre>Example outcome (simplified):
 - Normal request   -> 200, ~400KB homepage
@@ -107,8 +157,8 @@
 Conclusion: endpoint returns homepage regardless of input; no auth logic exercised.</pre>
 
       <div class="note">
-        <strong style="color:#fde68a">Why this matters:</strong>
-        <span style="color:var(--muted)">Without validation, teams waste days on “critical” findings that aren’t real. With validation, the deliverable is trustworthy and immediately actionable.</span>
+        <strong>Why this matters:</strong>
+        <span>Without validation, teams waste days on "critical" findings that aren't real. With validation, the deliverable is trustworthy and immediately actionable.</span>
       </div>
 
       <h2>What you should expect in our deliverables</h2>
@@ -117,17 +167,24 @@ Conclusion: endpoint returns homepage regardless of input; no auth logic exercis
         <li><strong>Evidence:</strong> request/response excerpts and rationale</li>
         <li><strong>Reproduction:</strong> steps you can re-run immediately</li>
       </ul>
-
-      <div class="foot">
-        <div><a href="/">Home</a> • <a href="/#proof">Proof</a> • <a href="/privacy.html">Privacy</a> • <a href="/terms.html">Terms</a> • <a href="/.well-known/security.txt">Security</a></div>
-        <div style="margin-top:6px">© <span id="y"></span> Agentic Security Partners LLC</div>
-      </div>
     </div>
   </div>
+
+  <footer class="foot">
+    <div class="foot-inner">
+      <div class="foot-links">
+        <a href="/">Home</a>
+        <a href="/#proof">Proof</a>
+        <a href="/privacy.html">Privacy</a>
+        <a href="/terms.html">Terms</a>
+        <a href="/.well-known/security.txt">Security</a>
+      </div>
+      <div class="foot-copy">© <span id="y"></span> Agentic Security Partners LLC</div>
+    </div>
+  </footer>
+  
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
   </script>
 </body>
 </html>
-
-
