feat: sharpen homepage outcome bubbles
Highlight speed, coverage, validation, and OWASP alignment to better contrast scanners and pentests.

--- a/index.html
+++ b/index.html
@@ -401,20 +401,20 @@
         <div class="card heroR">
           <div class="stats">
             <div class="stat">
-              <div class="statNum">24hr</div>
-              <div class="statLabel">Fastest Turnaround</div>
+              <div class="statNum">24-72 Hours</div>
+              <div class="statLabel">Actionable results, not weeks of waiting</div>
             </div>
             <div class="stat">
-              <div class="statNum">Full</div>
-              <div class="statLabel">Web + API Coverage</div>
+              <div class="statNum">Web + API Attacks</div>
+              <div class="statLabel">Modern application &amp; API abuse paths tested</div>
             </div>
             <div class="stat">
-              <div class="statNum">Every</div>
-              <div class="statLabel">Critical Finding Validated</div>
+              <div class="statNum">Human-Verified</div>
+              <div class="statLabel">No false positives. Every critical issue confirmed.</div>
             </div>
             <div class="stat">
-              <div class="statNum">OWASP</div>
-              <div class="statLabel">Top 10 aligned coverage</div>
+              <div class="statNum">OWASP-Aligned</div>
+              <div class="statLabel">Mapped to OWASP Top 10 &amp; real-world exploits</div>
             </div>
           </div>
         </div>
